--- a/notebook/Bank_Loan_default.ipynb
+++ b/notebook/Bank_Loan_default.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "# Loading the data.\n",
     "\n",
-    "data = pd.read_csv(r'C:\\Users\\lenovo\\Desktop\\Disha Github\\projects\\notebook\\data\\Loan_Default.csv',delimiter=',')"
+    "data = pd.read_csv(r'projects\\notebook\\data\\Loan_Default.csv',delimiter=',')"
    ]
   },
   {
